--- a/Genies Jam 2025/Packages/manifest.json
+++ b/Genies Jam 2025/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.genies.experience.sdk": "1.3.14",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cloud.ktx.webgl-2022": "1.0.1",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.ide.rider": "3.0.28",
